--- a/form.html
+++ b/form.html
@@ -7,8 +7,7 @@
     <link rel="icon" href="/favicon.ico">
   </head>
   <body>
-    <img alt="the hacker symbol" src="http://www.catb.org/hacker-emblem/glider.png">
-    <h1>Bienvenue sur le formulaire</h1>
+    <h1>Bienvenue sur le formulaire des sd</h1>
     <form action="debug"
 	  method="post">
       <p><label>Prénom: <input name="prenom"></label>
