--- a/page1.html
+++ b/page1.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="monstyle.css">
     <title>Page n°1</title>
   </head>
   <body>
