--- a/page1.html
+++ b/page1.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="monstyle.css">
+    <link rel="icon" href="/favicon.ico">
     <title>Page n°1</title>
   </head>
   <body>
